# kanji-searcher

./: Cargo.toml  README.md  index.html  styles.css
src/: lib.rs
tests/: web.rs
