[package]
name = "kanji-searcher"
version = "0.1.0"
authors = ["Edvard Nivala, edvard.nivala@metropolia.fi"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
wasm-bindgen-test = "0.3.41"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[profile.release]
opt-level = "s"
